fixed translation bug - added interaction with subtile block via shopify editor

--- a/locales/en.default.schema.json
+++ b/locales/en.default.schema.json
@@ -1957,6 +1957,9 @@
         "title": {
           "name": "Title"
         },
+        "subtitle": {
+          "name": "Subtitle"
+        },
         "price": {
           "name": "Price"
         },
