--- a/locales/de.schema.json
+++ b/locales/de.schema.json
@@ -1634,6 +1634,9 @@
         "title": {
           "name": "Titel"
         },
+        "subtitle": {
+          "name": "Untertitel"
+        },
         "price": {
           "name": "Preis"
         },
